--- a/WebSite/Styles/styles.css
+++ b/WebSite/Styles/styles.css
@@ -20,12 +20,16 @@ body{
     scroll-behavior: smooth;
     max-width: 100%;
 
+    --backgroundcolor-highest-pink: rgb(255,142,209);
     --backgroundcolor-high-pink: rgb(255,167,219);
+    --backgroundcolor-normal-pink: rgb(255,193,230);
+    --backgroundcolor-low-pink: rgb(255,218,240);
+    --bakgroundcolor-lowest-pink: rgb(255,244,250);
 }
 
 header{
 
-    padding: 1.5em 2.8em;
+    padding: .6em 2.5em .2em 2.5em;
 
     display: flex;
     justify-content: space-between;
@@ -34,12 +38,66 @@ header{
     border-bottom: 1px solid #c7c7c7
 }
 
+/*-----------IMAGE SLIDER-----------*/
+
+.slider {
+    width: 100%;
+    height: 450px;
+    background-color: yellow;
+    margin: 0 auto;
+    text-align: center;
+    overflow: hidden;
+  }
+  .image-container {
+    width: 100%;
+    background-color: pink;
+    height: 450px;
+    clear: both;
+    position: relative;
+    -webkit-transition: left 2s;
+    -moz-transition: left 2s;
+    -o-transition: left 2s;
+    transition: left 2s;
+  }
+  .slide {
+    float: left;
+    margin: 0px;
+    padding: 0px;
+    position: relative;
+    width: 100%;
+    height: 450px;
+  }
+  #slide-1:target ~ .image-container {
+    left: 0px;
+  }
+  #slide-2:target ~ .image-container {
+    left: -1000px;
+  }
+  #slide-3:target ~ .image-container {
+    left: -2000px;
+  }
+  .buttons {
+    position: relative;
+    top: -0px;
+  }
+  .buttons a {
+    display: inline-block;
+    height: 10px;
+    width: 10px;
+    border-radius: 50px;
+    background-color: #a6a6a6;
+  }
+
+  .current-button{
+    background-color: white !important;
+  }
+
 /*------------ANIMACIONES------------*/
 
 /*------------NAVBAR------------*/
 /*LOGO STYLES*/
 .logo-image{
-    height: 122px;
+    height: 90px;
 }
 
 /*NAV LINKS*/
@@ -60,6 +118,7 @@ header{
 .nav-link > a{
     color: black;
     text-decoration: none;
+    font-size: .95em;
 }
 
 .animated-sites-underline{
@@ -132,21 +191,6 @@ header{
 
 /*Media queries*/
 
-@media only screen and (min-width: 1500px){
-    .nav-link{
-        font-size: 1.225rem;
-    }
-}
-
-@media only screen and (min-width: 2100px){
-    .logo-image{
-        height: 90px;
-    }
-    .nav-link{
-        font-size: 1.6rem;
-    }
-}
-
 @media only screen and (max-width: 980px){
     .nav-links{
         padding-right: 0;
@@ -155,7 +199,7 @@ header{
 
 @media only screen and (max-width: 580px){
     .logo-image{
-        height: 50px;
+        height: 80px;
     }
 
     .nav-links{
@@ -171,14 +215,14 @@ header{
         width: 0;
         padding: 0 90px;
 
-        background-color: var(--backgroundcolor-black);
-
-        border-top-style: solid;
-        border-color: white;
+        background-color: white;
+        /*add a border to the left*/
+        border-left: 1px solid rgb(255,167,219);
     }
     .nav-link{
         padding: 0;
         height: 10vh;
+        color:white;
     }
     .animated-sites-underline{
         display: none;
@@ -207,8 +251,4 @@ header{
     .burger{
         display: block;
     }
-}
-
-@media only screen and (max-width: 400px){
-    
 }
