--- a/WebSite/Styles/styles.css
+++ b/WebSite/Styles/styles.css
@@ -9,9 +9,15 @@
     width: 9px;
 }
 ::-webkit-scrollbar-track {
-    background: #bdbdbd;
+    background: #ececec;
+    border-radius: 50px;
 }
 ::-webkit-scrollbar-thumb {
+    background-color: var(--backgroundcolor-normal-pink);
+    border-radius: 50px;
+}
+
+::-webkit-scrollbar-thumb:hover {
     background-color: var(--backgroundcolor-high-pink);
 }
 
@@ -49,7 +55,14 @@ h3{
     margin-bottom: 0;
 }
 
-/*------------ANIMACIONES------------*/
+hr{
+    border: 0;
+    padding: 3em;
+}
+
+
+/*------------ANIMATIONS------------*/
+
 
 /*------------NAVBAR------------*/
 /*LOGO STYLES*/
@@ -144,6 +157,87 @@ h3{
     transition: .4s;
 }
 
+/*-----------IMAGE SLIDER----------*/
+
+.slider-container{
+    width: 100%;
+    height: 400px;
+    background-color: #ececec;
+
+    position: relative;
+}
+
+.left-button, .right-button{
+    position: absolute;
+    top: 50%;
+    width: 40px;
+    height: 40px;
+    background-color: white;
+
+    transform: translateY(-50%);
+    line-height: 50px;
+    border-radius: 50%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+
+    cursor: pointer;
+}
+
+.left-button{
+    left:12px;
+}
+
+.right-button{
+    right:12px;
+}
+
+.index-button-1, .index-button-2, .index-button-3{
+    position: absolute;
+    top: 90%;
+    width: 12px;
+    height: 12px;
+    background-color: white;
+
+    transform: translateY(-90%);
+    line-height: 50px;
+    border-radius: 50%;
+
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+
+    cursor: pointer;
+}
+
+.index-button-1{
+    left: 46%;
+}
+
+.index-button-2{
+    left: 50%;
+}
+
+.index-button-3{
+    left: 54%;
+}
+
+.current-slider-index{
+    background-color: var(--backgroundcolor-high-pink);
+}
+
+.slider-image{
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    background-size: cover;
+    background-position: 50%;
+
+    transition: .5s;
+}
+
 /*-----------FOOTER----------*/
 
 .footer-text{
@@ -189,15 +283,15 @@ h3{
 
         position: absolute;
         right: 0;
-        margin-top: 52px;
+        margin-top: 35px;
 
         height: 89vh;
         width: 0;
         padding: 0 90px;
 
         background-color: white;
-        /*add a border to the left*/
-        border-left: 1px solid rgb(255,167,219);
+
+        z-index: 1;
     }
     .nav-link{
         padding: 0;
