--- a/WebSite/Styles/styles.css
+++ b/WebSite/Styles/styles.css
@@ -238,6 +238,61 @@ hr{
     transition: .5s;
 }
 
+/*-----------DR INFORMATION-----------*/
+
+.dr-div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.dr-image-card{
+    width: 200px;
+    height: 245px;
+
+    margin-bottom: 20px;
+    margin-left: 10px;
+
+    box-shadow: 10px -8px 30px rgba(0,0,0,0.2);
+}
+
+.dr-image{
+    width: 200px;
+    height: 245px;
+    
+    background-color: #c7c7c7;
+
+    box-shadow: -10px 10px var(--backgroundcolor-low-pink);
+}
+
+.dr-name{
+    font-size: 1.15em;
+}
+
+.dr-information{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.dr-information > p{
+    text-align: center;
+    margin: 4px;
+}
+
+/*-----------TYPES OF CONSULTS-------------*/
+
+.title-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.title{
+    text-align: center;
+    border-bottom: 6px solid var(--backgroundcolor-high-pink);
+}
+
 /*-----------FOOTER----------*/
 
 .footer-text{
