--- a/WebSite/Styles/styles.css
+++ b/WebSite/Styles/styles.css
@@ -60,6 +60,35 @@ hr{
     padding: 3em;
 }
 
+.title-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.title{
+    text-align: center;
+    border-bottom: 6px solid var(--backgroundcolor-high-pink);
+}
+
+.normal-button-container{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+
+    margin-right: 4em;
+}
+
+.normal-button{
+    background-color: var(--backgroundcolor-high-pink);
+    border: none;
+    color: white;
+    padding: .8em 1.1em;
+    font-size: 1.1em;
+    cursor: pointer;
+
+    box-shadow: -5px 5px 10px rgba(0,0,0,0.2);
+}
 
 /*------------ANIMATIONS------------*/
 
@@ -282,15 +311,112 @@ hr{
 
 /*-----------TYPES OF CONSULTS-------------*/
 
-.title-container{
+.info-cards-container{
+    margin-top: 1.6em;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.info-card-container{
+    width: 280px;
+    height: 200px;
+
+    margin-bottom: 3em;
+    margin-left: 10px;
+
+    box-shadow: 1px -1px 30px rgba(0,0,0,0.2);
+}
+
+.info-card{
+    width: 280px;
+    height: 200px;
+    
+    background-color: white;
+
+    box-shadow: -12px 12px var(--backgroundcolor-low-pink);
+    overflow: auto;
+    text-overflow: ellipsis;
+
+    position: relative;
+}
+
+.hidden-cards{
+    display: none;
+}
+
+.info-card-text{
+    text-align: center;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+h4.info-card-text{
+    margin-bottom: 0;
+}
+
+p.info-card-text{
+    margin-top: .5em;
+}
+
+.cards-listing > li{
+    margin: .3em 0;
+}
+
+/*-----------MAP SECTIONS----------*/
+
+.map-container{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/*----------SCHEDULE STYLES-----------*/
+
+.table-container{
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.title{
-    text-align: center;
-    border-bottom: 6px solid var(--backgroundcolor-high-pink);
+.table-container > img{
+    width: 80%;
+}
+
+.form-container{
+    margin: 4em 0;
+
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.form-mini-container{
+    margin: 0 2em;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.form-input-container{
+    margin: 2em 0;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.form-input-container > label{
+    margin-bottom: .5em;
+}
+
+.form-input-container > input{
+    border: none;
+    border: 2px solid var(--backgroundcolor-high-pink);
+    border-radius: 2px;
+
+    padding: .6em;
 }
 
 /*-----------FOOTER----------*/
@@ -314,6 +440,7 @@ hr{
 
 .whatsapp-logo{
     padding-left: 5px;
+    padding-right: 5px;
 }
 
 /*------------RESPONSIVE DESIGN------------*/
@@ -383,5 +510,9 @@ hr{
 
     .slider-container{
         height: 280px;
+    }
+
+    .table-container > img{
+        width:95%;
     }
 }
